--- a/privacy.html
+++ b/privacy.html
@@ -8,15 +8,15 @@ layout: default
   <h1>Privacy</h1>
 
 <h2><strong>Site Usage and User Tracking</strong></h2>
-<p><strong>Ideava</strong> tracks user traffic patterns. We do not collect specific data but only track information to determine which areas of our site users like and would consider visiting again. We do not track what an individual user reads or views &#8211; just how well each page performs overall. This helps us to provide quality software programming services and helps ensure customer satisfaction. Oxagile does not use cookies to track user traffic patterns. Cookies are text files that are stored in the browser files on your computer.</p>
+<p><strong>Ideava</strong> tracks user traffic patterns. We do not collect specific data but only track information to determine which areas of our site users like and would consider visiting again. We do not track what an individual user reads or views &#8211; just how well each page performs overall. This helps us to provide quality software programming services and helps ensure customer satisfaction. Ideava does not use cookies to track user traffic patterns. Cookies are text files that are stored in the browser files on your computer.</p>
 <h2><strong>Personal Information Sharing</strong></h2>
-<p>Oxagile does not share or distribute any information or documents about individual users with any third party, except to comply with applicable laws or valid legal processes or to protect the personal safety of our users or the public.</p>
+<p>Ideava does not share or distribute any information or documents about individual users with any third party, except to comply with applicable laws or valid legal processes or to protect the personal safety of our users or the public.</p>
 <h2><strong>Security</strong></h2>
-<p>Our site has advanced industry-standard security measures to prevent data loss, misuse, or alteration. Most Oxagile personnel cannot access your personal information. Only Ideava managers, who are in charge of customer communications, are exempt from this rule.</p>
+<p>Our site has advanced industry-standard security measures to prevent data loss, misuse, or alteration. Most Ideava personnel cannot access your personal information. Only Ideava managers, who are in charge of customer communications, are exempt from this rule.</p>
 <h2><strong>Changes</strong></h2>
-<p>Oxagile reserves the right to change, alter, or update this Privacy Statement at any time. As a result, we encourage you to review this privacy statement periodically to track changes.</p>
+<p>Ideava reserves the right to change, alter, or update this Privacy Statement at any time. As a result, we encourage you to review this privacy statement periodically to track changes.</p>
 <h2><strong>Contact Information</strong></h2>
-<p>Oxagile welcomes your comments and questions on this statement. Please do not hesitate to contact us via the contact form</a>.</p>
+<p>Ideava welcomes your comments and questions on this statement. Please do not hesitate to contact us via the contact form</a>.</p>
 				
 
 
