--- a/privacy.html
+++ b/privacy.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {background-color:yellow;}
+h1   {color:blue;}
+p    {color:green;}
+</style>
+</head>
+<body>
 
 <div class="home">
 
@@ -17,3 +27,10 @@
 
 
 </div>
+</body>
+</html>
+
+
+
+
+
