--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-body {background-color:#{{ site.color.primary }};}
+body {background-color:#{{ site.color.primary-dark }};}
 
 </style>
 </head>
