--- a/terms.html
+++ b/terms.html
@@ -1,69 +1,120 @@
 <div class="row-fluid">
-    <h1 class="pull-left">Terms of Use</h1>
-  </div>
-  <div class="row-fluid">
-    <div class="span9">
-      <h2 class="sub edit">Copyright Statement and Terms of Use</h2>
-      <p>The use of any product, service or feature (the "Materials") available through the internet website accessible at by any user of the website ("you" or "your") shall be governed by the following Terms of Use:</p>
-      <p>This website is provided by Silicus Technologies, Inc. (Silicus), and may be used for informational purposes only. By using the site or downloading the Materials from the site, you agree to abide by the terms and conditions set forth in this notice. If you do not agree to abide by these terms and conditions please do not use the website or download materials from the website.</p>
-      <p>This Site, including all Materials present (excluding any applicable third party materials), is the property of Silicus and is copyrighted and protected by worldwide copyright laws and treaty provisions. You agree to comply with all copyright laws worldwide in your use of this website and to prevent any unauthorized copying of the Materials. Silicus does not grant any express or implied rights under any patents, trademarks, copyrights or trade secret information.</p>
-      <p>Silicus has business relationships with thousands of customers, suppliers, governments, and others. For convenience and simplicity, words like joint venture, partnership, and partner are used to indicate business relationships involving common activities and interests, and those words may not indicate precise legal relationships.</p>
-    </div>
-    <div class="span3">
-      <div class="contact-box pull-right fixed-wd">
-  <div class="box black padded">
-    <ul class="not-listed">
-      <li>15 years in business</li>
-      <li>100+ clients</li>
-      <li>50+ solutions deployed/year</li>
-      <li>300+ software releases/year</li>
-      <li>CMMi Level 3 Assessed</li>
-    </ul>
-    <div class="trans-border clearfix"></div>
-    <p class="white italic">Discuss your requirements <br>
-      Get a price quote</p>
-    <a href="#" class="btn btn-block btn-blue cust" data-toggle="modal" data-target="#contact-form" title="Contact Us">Contact Us</a> </div>
-  <h5 class="phone text-center grey-bg"><i class="i-phone"></i> +1 (866) 912-8855</h5>
+
+<h1 class="pull-left">Terms of Use</h1>
+
 </div>
-    </div>
-  </div>
-  <div class="row-fluid">
-    <div class="span12">
-      <article>
-        <h2>Limited License</h2>
-        <p>Subject to the terms and conditions set forth in these Terms of Use, Silicus grants you a non-exclusive, non-transferable, limited right to access, use and display this site and the materials thereon. You agree not to interrupt or attempt to interrupt the operation of the site in any way. </p>
-      </article>
-      <article>
-        <h2>Third Party Content</h2>
-        <p>The website makes information of third parties available, including articles, reports, news reports, tools to facilitate calculation, company information and other data (the "Third Party Content"). You acknowledge and agree that the Third Party Content is not created or endorsed by Silicus nor are any products or services offered through it. The provision of Third Party Content is for general informational purposes only and does not constitute a recommendation or solicitation. In addition, the Third Party Content is not intended to provide tax, legal or investment advice. You acknowledge that the Third Party Content provided to you is obtained from sources believed to be reliable, but that no guarantees are made by the website or the providers of the Third Party Content as to its accuracy, completeness, timeliness. You agree not to hold the website, any business offering products or services through the website or any provider of Third Party Content liable for any investment decision or other transaction you may make based on your reliance on or use of such data, or any liability that may arise due to delays or interruptions in the delivery of the Third Party Content for any reason.</p>
-        <p>By using any Third Party Content, you may leave this website and be directed to an external website, or to a website maintained by an entity other than Silicus. If you decide to visit any such site, you do so at your own risk and it is your responsibility to take all protective measures to guard against viruses or other destructive elements. Silicus makes no warranty or representation regarding, and does not endorse, any linked website or the information appearing thereon or any of the products or services described thereon. Links do not imply that Silicus or this Site sponsors, endorses, is affiliated or associated with, or is legally authorized to use any trademark, trade name, logo or copyright symbol displayed in or accessible through the links, or that any linked site is authorized to use any trademark, trade name, logo or copyright symbol of Silicus or any of its affiliates or subsidiaries.</p>
-      </article>
-      <article>
-        <h3>No Warranties</h3>
-        <p style="text-transform:lowercase;">THIS SITE, THE INFORMATION AND MATERIALS ON THE SITE, AND ANY SOFTWARE MADE AVAILABLE ON THE SITE, ARE PROVIDED "AS IS" WITHOUT ANY REPRESENTATION OR WARRANTY, EXPRESS OR IMPLIED, OF ANY KIND, INCLUDING, BUT NOT LIMITED TO, WARRANTIES OF MERCHANTABILITY, NON INFRINGEMENT, OR FITNESS FOR ANY PARTICULAR PURPOSE. THERE IS NO WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, REGARDING THIRD PARTY CONTENT. THERE IS ALSO NO WARRANTY THAT THIS SITE WILL BE FREE OF ANY COMPUTER VIRUSES. SOME JURISDICTIONS DO NOT ALLOW FOR THE EXCLUSION OF IMPLIED WARRANTIES, SO THE ABOVE EXCLUSIONS MAY NOT APPLY TO YOU.</p>
-      </article>
-      <article>
-        <h3>Limitation of Damages</h3>
-        <p style="text-transform:lowercase;">IN NO EVENT SHALL Silicus OR ANY OF ITS SUBSIDIARIES OR AFFILIATES BE LIABLE TO ANY ENTITY FOR ANY DIRECT, INDIRECT, SPECIAL, CONSEQUENTIAL OR OTHER DAMAGES (INCLUDING, WITHOUT LIMITATION, ANY LOST PROFITS, BUSINESS INTERRUPTION, LOSS OF INFORMATION OR PROGRAMS OR OTHER DATA ON YOUR INFORMATION HANDLING SYSTEM) THAT ARE RELATED TO THE USE OF, OR THE INABILITY TO USE, THE CONTENT, MATERIALS, AND FUNCTIONS OF THE website OR ANY LINKED website, EVEN IF Silicus IS EXPRESSLY ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. </p>
-      </article>
-      <article>
-        <h3>Disclaimer</h3>
-        <p style="text-transform:lowercase;">THE WEBSITE MAY CONTAIN INACCURACIES AND TYPOGRAPHICAL AND CLERICAL ERRORS. Silicus EXPRESSLY DISCLAIMS ANY OBLIGATION TO UPDATE THIS SITE OR ANY OF THE MATERIALS ON THIS SITE. Silicus DOES NOT WARRANT THE ACCURACY OR COMPLETENESS OF THE MATERIALS OR THE RELIABILITY OF ANY ADVICE, OPINION, STATEMENT OR OTHER INFORMATION DISPLAYED OR DISTRIBUTED THROUGH THE SITE. YOU ACKNOWLEDGE THAT ANY RELIANCE ON ANY SUCH OPINION, ADVICE, STATEMENT, MEMORANDUM, OR INFORMATION SHALL BE AT YOUR SOLE RISK. Silicus RESERVES THE RIGHT, IN ITS SOLE DISCRETION, TO CORRECT ANY ERRORS OR OMISSIONS IN ANY PORTION OF THE SITE. Silicus MAY MAKE ANY OTHER CHANGES TO THE SITE, THE MATERIALS AND THE PRODUCTS, PROGRAMS, SERVICES OR PRICES (IF ANY) DESCRIBED IN THE SITE AT ANY TIME WITHOUT NOTICE.</p>
-      </article>
-      <article>
-        <h3>Indemnity</h3>
-        <p>You agree to indemnify and hold harmless Silicus, its subsidiaries and affiliates from any claim, cost, expense, judgment or other loss relating to your use of this website, including without limitation of the foregoing, any action you take which is in violation of the terms and conditions of these Terms of Use.</p>
-      </article>
-      <article>
-        <h3>Changes</h3>
-        <p>Silicus reserves the rights, at its sole discretion, to change, modify, add or remove any portion of these Terms of Use in whole or in part, at any time. Changes in these Terms of Use will be effective when notice of such change is posted. Your continued use of the website after any changes to these Terms of Use are posted will be considered acceptance of those changes. Silicus may terminate, change, suspend or discontinue any aspect of the Silicus website, including the availability of any features of the Site, at any time. Silicus may also impose limits on certain features and services or restrict your access to parts or the entire website without notice or liability. Silicus may terminate the authorization, rights and license given above and, upon such termination you shall immediately destroy all materials. </p>
-      </article>
-      <article>
-        <h3>International Users and Choics of Law</h3>
-        <p>This Site is controlled, operated and administered by Silicus from its offices within USA. Silicus makes no representation that materials at this site are appropriate or available for use at other locations outside of USA and access to them from territories where their contents are illegal is prohibited. You may not use the website or export the Materials in violation of any applicable export laws and regulations. If you access this Site from a location outside of USA, you are responsible for compliance with all local laws. These Terms of Use shall be governed by the laws of USA, without giving effect to its conflict of laws provisions. You agree that the appropriate court in USA will have the exclusive jurisdiction to resolve all disputes arising under these Terms of Use, and you consent to personal jurisdiction in such forum.</p>
-        <p>These Terms of Use constitutes the entire agreement between Silicus and you with respect to your use of the website. Any cause of action you may have with respect to your use of the website must be commenced within one (1) year after the claim or cause of action arises. If for any reason a court of competent jurisdiction finds any provision of these Terms of Use or portion thereof, to be unenforceable, that provision shall be enforced to the maximum extent permissible so as to affect the intent of these Terms of Use, and the remainder of these Terms of Use shall continue in full force and effect. </p>
-      </article>
-    </div>
-  </div>
-  </div>
-  </div>
+
+<div class="row-fluid">
+
+<div class="span9">
+
+<h2 class="sub edit">Copyright Statement and Terms of Use</h2>
+
+<p>The use of any product, service or feature (the "Materials") available through the internet website accessible at by any user of the website ("you" or "your") shall be governed by the following Terms of Use:</p>
+
+<p>This website is provided by  Ideava  Technologies, Inc. ( Ideava ), and may be used for informational purposes only. By using the site or downloading the Materials from the site, you agree to abide by the terms and conditions set forth in this notice. If you do not agree to abide by these terms and conditions please do not use the website or download materials from the website.</p>
+
+<p>This Site, including all Materials present (excluding any applicable third party materials), is the property of  Ideava  and is copyrighted and protected by worldwide copyright laws and treaty provisions. You agree to comply with all copyright laws worldwide in your use of this website and to prevent any unauthorized copying of the Materials.  Ideava  does not grant any express or implied rights under any patents, trademarks, copyrights or trade secret information.</p>
+
+<p> Ideava  has business relationships with thousands of customers, suppliers, governments, and others. For convenience and simplicity, words like joint venture, partnership, and partner are used to indicate business relationships involving common activities and interests, and those words may not indicate precise legal relationships.</p>
+
+</div>
+
+<div class="span3">
+
+<div class="contact-box pull-right fixed-wd">
+
+<div class="box black padded">
+
+
+
+<div class="trans-border clearfix"></div>
+
+
+
+</div>
+
+</div>
+
+</div>
+
+<div class="row-fluid">
+
+<div class="span12">
+
+<article>
+
+<h2>Limited License</h2>
+
+<p>Subject to the terms and conditions set forth in these Terms of Use,  Ideava  grants you a non-exclusive, non-transferable, limited right to access, use and display this site and the materials thereon. You agree not to interrupt or attempt to interrupt the operation of the site in any way. </p>
+
+</article>
+
+<article>
+
+<h2>Third Party Content</h2>
+
+<p>The website makes information of third parties available, including articles, reports, news reports, tools to facilitate calculation, company information and other data (the "Third Party Content"). You acknowledge and agree that the Third Party Content is not created or endorsed by  Ideava  nor are any products or services offered through it. The provision of Third Party Content is for general informational purposes only and does not constitute a recommendation or solicitation. In addition, the Third Party Content is not intended to provide tax, legal or investment advice. You acknowledge that the Third Party Content provided to you is obtained from sources believed to be reliable, but that no guarantees are made by the website or the providers of the Third Party Content as to its accuracy, completeness, timeliness. You agree not to hold the website, any business offering products or services through the website or any provider of Third Party Content liable for any investment decision or other transaction you may make based on your reliance on or use of such data, or any liability that may arise due to delays or interruptions in the delivery of the Third Party Content for any reason.</p>
+
+<p>By using any Third Party Content, you may leave this website and be directed to an external website, or to a website maintained by an entity other than  Ideava . If you decide to visit any such site, you do so at your own risk and it is your responsibility to take all protective measures to guard against viruses or other destructive elements.  Ideava  makes no warranty or representation regarding, and does not endorse, any linked website or the information appearing thereon or any of the products or services described thereon. Links do not imply that  Ideava  or this Site sponsors, endorses, is affiliated or associated with, or is legally authorized to use any trademark, trade name, logo or copyright symbol displayed in or accessible through the links, or that any linked site is authorized to use any trademark, trade name, logo or copyright symbol of  Ideava  or any of its affiliates or subsidiaries.</p>
+
+</article>
+
+<article>
+
+<h3>No Warranties</h3>
+
+<p style="text-transform:lowercase;">THIS SITE, THE INFORMATION AND MATERIALS ON THE SITE, AND ANY SOFTWARE MADE AVAILABLE ON THE SITE, ARE PROVIDED "AS IS" WITHOUT ANY REPRESENTATION OR WARRANTY, EXPRESS OR IMPLIED, OF ANY KIND, INCLUDING, BUT NOT LIMITED TO, WARRANTIES OF MERCHANTABILITY, NON INFRINGEMENT, OR FITNESS FOR ANY PARTICULAR PURPOSE. THERE IS NO WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, REGARDING THIRD PARTY CONTENT. THERE IS ALSO NO WARRANTY THAT THIS SITE WILL BE FREE OF ANY COMPUTER VIRUSES. SOME JURISDICTIONS DO NOT ALLOW FOR THE EXCLUSION OF IMPLIED WARRANTIES, SO THE ABOVE EXCLUSIONS MAY NOT APPLY TO YOU.</p>
+
+</article>
+
+<article>
+
+<h3>Limitation of Damages</h3>
+
+<p style="text-transform:lowercase;">IN NO EVENT SHALL IDEAVA  OR ANY OF ITS SUBSIDIARIES OR AFFILIATES BE LIABLE TO ANY ENTITY FOR ANY DIRECT, INDIRECT, SPECIAL, CONSEQUENTIAL OR OTHER DAMAGES (INCLUDING, WITHOUT LIMITATION, ANY LOST PROFITS, BUSINESS INTERRUPTION, LOSS OF INFORMATION OR PROGRAMS OR OTHER DATA ON YOUR INFORMATION HANDLING SYSTEM) THAT ARE RELATED TO THE USE OF, OR THE INABILITY TO USE, THE CONTENT, MATERIALS, AND FUNCTIONS OF THE website OR ANY LINKED website, EVEN IF  Ideava  IS EXPRESSLY ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. </p>
+
+</article>
+
+<article>
+
+<h3>Disclaimer</h3>
+
+<p style="text-transform:lowercase;">THE WEBSITE MAY CONTAIN INACCURACIES AND TYPOGRAPHICAL AND CLERICAL ERRORS.  Ideava  EXPRESSLY DISCLAIMS ANY OBLIGATION TO UPDATE THIS SITE OR ANY OF THE MATERIALS ON THIS SITE.  Ideava  DOES NOT WARRANT THE ACCURACY OR COMPLETENESS OF THE MATERIALS OR THE RELIABILITY OF ANY ADVICE, OPINION, STATEMENT OR OTHER INFORMATION DISPLAYED OR DISTRIBUTED THROUGH THE SITE. YOU ACKNOWLEDGE THAT ANY RELIANCE ON ANY SUCH OPINION, ADVICE, STATEMENT, MEMORANDUM, OR INFORMATION SHALL BE AT YOUR SOLE RISK.  Ideava  RESERVES THE RIGHT, IN ITS SOLE DISCRETION, TO CORRECT ANY ERRORS OR OMISSIONS IN ANY PORTION OF THE SITE.  Ideava  MAY MAKE ANY OTHER CHANGES TO THE SITE, THE MATERIALS AND THE PRODUCTS, PROGRAMS, SERVICES OR PRICES (IF ANY) DESCRIBED IN THE SITE AT ANY TIME WITHOUT NOTICE.</p>
+
+</article>
+
+<article>
+
+<h3>Indemnity</h3>
+
+<p>You agree to indemnify and hold harmless  Ideava , its subsidiaries and affiliates from any claim, cost, expense, judgment or other loss relating to your use of this website, including without limitation of the foregoing, any action you take which is in violation of the terms and conditions of these Terms of Use.</p>
+
+</article>
+
+<article>
+
+<h3>Changes</h3>
+
+<p> Ideava  reserves the rights, at its sole discretion, to change, modify, add or remove any portion of these Terms of Use in whole or in part, at any time. Changes in these Terms of Use will be effective when notice of such change is posted. Your continued use of the website after any changes to these Terms of Use are posted will be considered acceptance of those changes.  Ideava  may terminate, change, suspend or discontinue any aspect of the  Ideava  website, including the availability of any features of the Site, at any time.  Ideava  may also impose limits on certain features and services or restrict your access to parts or the entire website without notice or liability.  Ideava  may terminate the authorization, rights and license given above and, upon such termination you shall immediately destroy all materials. </p>
+
+</article>
+
+<article>
+
+<h3>International Users and Choics of Law</h3>
+
+<p>This Site is controlled, operated and administered by  Ideava  from its offices within Germany.  Ideava  makes no representation that materials at this site are appropriate or available for use at other locations outside of Germany and access to them from territories where their contents are illegal is prohibited. You may not use the website or export the Materials in violation of any applicable export laws and regulations. If you access this Site from a location outside of Germany, you are responsible for compliance with all local laws. These Terms of Use shall be governed by the laws of Germany, without giving effect to its conflict of laws provisions. You agree that the appropriate court in Germany will have the exclusive jurisdiction to resolve all disputes arising under these Terms of Use, and you consent to personal jurisdiction in such forum.</p>
+
+<p>These Terms of Use constitutes the entire agreement between  Ideava  and you with respect to your use of the website. Any cause of action you may have with respect to your use of the website must be commenced within one (1) year after the claim or cause of action arises. If for any reason a court of competent jurisdiction finds any provision of these Terms of Use or portion thereof, to be unenforceable, that provision shall be enforced to the maximum extent permissible so as to affect the intent of these Terms of Use, and the remainder of these Terms of Use shall continue in full force and effect. </p>
+
+</article>
+
+</div>
+
+</div>
+
+</div>
+
+</div>
+
